# 2_watch_tower

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tessl.json
.claude/: settings.json
.claude/commands/: download-video.md
.claude/skills/: tessl__run-check-server  tessl__scaffold-project
.tessl/: RULES.md
api/: app.py  schemas.py  utils.py
api/routes/: annotations.py  videos.py  zones.py
docs/: architecture.md  getting-started.md  index.md
docs/concepts/: roadmap.md
docs/product/: overview.md  zone-tool-manual.md
docs/references/: architecture.md  detection-metrics.md  dev-environment.md  getting-started.md  models-and-datasets.md  pc-speck.md
docs/report/: 00.phase2-person-detection-tracking.md  01.small-object-detection-improvements.md  02.soda-benchmark-results.md  03.sahi-coco-benchmark.md  04.soda-finetune-benchmark.md  05.visual-model-comparison.md  06.ppe-detection.md
docs/research/: camera-distance-angle-ppe-detection.md  comparison-recommendation.md  danger-zone-intrusion-research.md  edge-device-jetson.md  (+10 more)
experiments/: README.md
frontend/: package-lock.json  package.json  vite.config.ts
models/: README.md
scripts/: benchmark_models.py  convert_soda_to_yolo.py  download_models.py  download_video.py  eval_person_detection.py  extract_frames.py  generate_ground_truth.py  remap_construction_ppe.py  run_inference.py  run_sahi_detection.py  run_tracking.py  run_zone_detection.py  setup_settings.py  train_soda_person.py
tests/: conftest.py  test_api.py  test_ppe_logic.py  test_smoke.py  test_zone_config.py  test_zone_logic.py  test_zone_processor.py
tmp/: phase-1-datasets.md  phase-1-ecosystem.md  phase-1-roadmap.md  system-architecture.md  train-cmd.md
(+213 files in other folders)
